minor fixes on mobile css setup

--- a/src/components/CentralBody/index.css
+++ b/src/components/CentralBody/index.css
@@ -1,13 +1,9 @@
-
-.body-section{
-  margin-top: 2%;
+.bod-section{
   height: 450px;
-  background: seagreen;
-  clip-path: polygon(30% 0, 100% 10%, 100% 100%, 0 100%, 0 100%, 0 8%);
   display: flex;
 }
 .bio-line#first{
-  border: 4px solid #ffffff;
+  border: 2px solid #ffffff;
   position: absolute;
   width: 260px;
   margin: 11% 0% 0% -1%;
@@ -17,7 +13,7 @@
 }
 
 .bio-line#second{
-  border: 4px solid #ffffff;
+  border: 2px solid #ffffff;
   position: absolute;
   width: 260px;
   margin: 17% 0% 0% -1%;
@@ -28,7 +24,7 @@
 
 .bio-logo{
   height: 275px;
-  width: 285px;
+  width: 25%;
   border: 4px solid #e4e4e4;
   border-radius: 80%;
   margin-left: 15%;
@@ -57,13 +53,13 @@
 .mini-bio{
   color: #e4e4e4;
   width: 50%;
-  padding-left: 4%;
+  padding-left: 2%;
   height: 175px;
   font-style: italic;
   font-size: 23px;
   margin-top: 7.5%;
-  margin-left: 4%;
-  border-left: 5px solid #e4e4e4;
+  margin-left: 2%;
+  border-left: 3px solid #e4e4e4;
   border-radius: 0%;
 }
 #career{
@@ -76,7 +72,7 @@
   text-shadow: 1px 1px 1px black;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 750px) {
   .bio-line {
     display: none;
   }
@@ -89,9 +85,9 @@
   }
   .mini-bio{
     font-size: 13.4px;
-    margin-top: 13%;
+    margin-top: 16%;
     padding-left: 3%;
-    border-left: 3px solid white;
+    border-left: none;
     width: 55%;
     height: 183px;
   }
@@ -109,8 +105,8 @@
   .bio-img{
     border-radius: 2%;
   }
-  .body-section{
-    height: 300px;
+  .bod-section{
+    height: 350px;
   }
   .nav-btn{
     font-size: 10px;
