--- a/src/components/CentralHome/index.css
+++ b/src/components/CentralHome/index.css
@@ -1,6 +1,7 @@
 body{
   background: black;;
   font-family: 'Quicksand', sans-serif;
+  overflow-x: hidden;
 }
 @media only screen and (max-width: 600px) {
    #particles{
